--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
     <!-- Main Container -->
     <div class="relative h-screen w-full overflow-hidden">
         <!-- Background-->
-        <div style="z-index: -10" class="absolute bg-gradient-to-br from-green-100 via-green-50 to-purple-300 h-full w-full">
+        <div style="z-index: -10"
+            class="absolute bg-gradient-to-br from-green-100 via-green-50 to-purple-300 h-full w-full">
             <!--Background Image-->
             <img src="img/background-icons/BGCubes.svg"
                 class="absolute max-w-screen-lg max-h-screen ml-32 inset-y-0 -right-52 opacity-30 bg-auto filter blur-sm sm:bg-fixed sm:h-screen sm:opacity-30 sm:max-w-screen-lg sm:-right-28 md:max-w-screen-lg md:-right-28 lg:-right-16 lg:max-w-screen-2xl"
@@ -72,7 +73,7 @@
                             <span class="hidden lg:inline">Vote</span>
                         </a>
                         <!-- Result -->
-                        <a href="" class="nav-item">
+                        <a href="result.html" class="nav-item">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
                                 viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd"
@@ -108,7 +109,7 @@
                 class="flex w-full h-auto flex-col flex-grow p-12 mt-auto mb-auto lg:mt-0 lg:mb-0 overflow-y-scroll text-gray-700 ">
                 <!-- Header -->
                 <div class="flex justify-between w-full">
-                    <div class="relative -ml-4 w-72 h-20 rounded-xl p-4 text-white shadow-lg sm:p-6 sm:w-7/12 sm:mt-3 sm:ml-2 sm:rounded-2xl sm:h-28 md:ml-4 md:mt-4"
+                    <div class="relative  w-72 h-20 rounded-xl p-4 text-white shadow-lg sm:p-6 sm:w-7/12 sm:mt-3 sm:ml-2 sm:rounded-2xl  md:ml-4 md:mt-4 sm:h-28 "
                         style="background: #FFA000;">
                         <div class="flex flex-col items-start ">
                             <h1
@@ -124,15 +125,15 @@
                         </div>
                     </div>
                     <a href="#">
-                        <img class="filter drop-shadow-xl mt-2 ml-6 w-16 h-16 sm:w-20 sm:h-20 sm:mt-6 sm:mr-8 md:w-24 md:h-24 md:mr-8 md:mt-6"
+                        <img class="filter drop-shadow-xl mt-3 ml-3 w-14 h-14 sm:w-20 sm:h-20 sm:mt-6 sm:mr-8 md:w-20 md:h-24 md:mr-8 md:mt-6"
                             src="img/heading-icons/Final Profile pic(1).svg" alt="" srcset="">
                     </a>
                 </div>
                 <!-- Title -->
-                <div class="flex flex-wrap space-y-4 p-6 pt-8 pl-0 pr-0 sm:space-y-3">
-                    <div class="w-full">
+                <div class="flex flex-wrap space-y-4 sm:space-y-3">
+                    <div class="w-full p-6 flex-row">
                         <h1
-                            class="text-2xl font-normal tracking-wide flex justify-center sm:text-2xl md:text-3xl lg:text-4xl sm:p-1 md:p-3 lg:p-4">
+                            class="text-2xl font-normal tracking flex justify-center sm:text-3xl md:text-4xl lg:text-4xl sm:p-1 md:p-3 lg:p-4">
                             About
                         </h1>
                     </div>
@@ -149,14 +150,16 @@
                                         About Pollice
                                     </h4>
                                 </div>
-                                <p class="p-2 pt-4 sm:p-6 sm:pt-2 text-xs font-thin mt-1 ">Contrary to popular belief,
+                                <p class="p-2 pt-4 sm:p-6 sm:pt-2 text-xs font-thin mt-1">Contrary to popular belief,
                                     The Missions app is designed for professional Pricing Auditors to gather retail
                                     intelligence in the field. The app utilizes one of the largest pricing and product
                                     databases in existence today to create quick 'missions' for auditors to collect
-                                    fresh ongoing data.The Missions app is designed for professional Pricing Auditors to gather retail
+                                    fresh ongoing data.The Missions app is designed for professional Pricing Auditors to
+                                    gather retail
                                     intelligence in the field. The app utilizes one of the largest pricing and product
                                     databases in existence today to create quick 'missions' for auditors to collect
-                                    fresh ongoing data.The Missions app is designed for professional Pricing Auditors to gather retail
+                                    fresh ongoing data.The Missions app is designed for professional Pricing Auditors to
+                                    gather retail
                                     intelligence in the field. The app utilizes one of the largest pricing and product
                                     databases in existence today to create quick 'missions' for auditors to collect
                                     fresh ongoing data.
@@ -167,7 +170,7 @@
                     <div class="w-auto h-auto space-y-3 md:space-y-0 md:grid md:grid-cols-2 md:gap-1">
                         <div class="p-0 sm:p-6 sm:pt-0 lg:pt-0">
                             <!-- Content -->
-                            <div class="filter backdrop-blur-3xl w-auto h-60 p-5 border border-white lg:w-auto lg:flex lg:place-self-center shadow-lg"
+                            <div class="filter backdrop-blur-3xl w-auto h-auto p-5 border border-white lg:w-auto lg:flex lg:place-self-center shadow-lg"
                                 style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
                                     backdrop-filter: blur(1000px);
                                     border-radius: 16px;">
@@ -178,9 +181,11 @@
                                             Mission
                                         </h4>
                                     </div>
-                                    <p class="p-2 pt-4 sm:p-6 sm:pt-2 text-xs font-thin mt-1 ">Contrary to popular belief,
+                                    <p class="p-2 pt-4 sm:p-6 sm:pt-2 text-xs font-thin mt-1">Contrary to popular
+                                        belief,
                                         The Missions app is designed for professional Pricing Auditors to gather retail
-                                        intelligence in the field. The app utilizes one of the largest pricing and product
+                                        intelligence in the field. The app utilizes one of the largest pricing and
+                                        product
                                         databases in existence today to create quick 'missions' for auditors to collect
                                         fresh ongoing data.
                                     </p>
@@ -189,7 +194,7 @@
                         </div>
                         <div class="p-0 mb-12 sm:p-6 sm:pt-0 lg:pt-0">
                             <!-- Content -->
-                            <div class="filter backdrop-blur-3xl w-auto h-60 p-5 border border-white lg:w-auto lg:flex lg:place-self-center shadow-lg"
+                            <div class="filter backdrop-blur-3xl w-auto h-auto p-5 border border-white lg:w-auto lg:flex lg:place-self-center shadow-lg"
                                 style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
                                     backdrop-filter: blur(1000px);
                                     border-radius: 16px;">
@@ -200,9 +205,11 @@
                                             Vision
                                         </h4>
                                     </div>
-                                    <p class="p-2 pt-4 sm:p-6 sm:pt-2 text-xs font-thin mt-1 ">Contrary to popular belief,
+                                    <p class="p-2 pt-4 sm:p-6 sm:pt-2 text-xs font-thin mt-1 ">Contrary to popular
+                                        belief,
                                         The Missions app is designed for professional Pricing Auditors to gather retail
-                                        intelligence in the field. The app utilizes one of the largest pricing and product
+                                        intelligence in the field. The app utilizes one of the largest pricing and
+                                        product
                                         databases in existence today to create quick 'missions' for auditors to collect
                                         fresh ongoing data.
                                     </p>
@@ -210,9 +217,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-12 sm:p-6 sm:pt-0 lg:pt-0 w-screen h-auto">
+                    <div class="sm:p-6 sm:pt-0 lg:pt-0 w-screen h-auto">
                         <!-- Content -->
-                        <div class="filter backdrop-blur-3xl p-5 border border-white shadow-lg" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
+                        <div class="filter backdrop-blur-3xl p-5 mb-12 border border-white shadow-lg" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
                                 backdrop-filter: blur(1000px);
                                 border-radius: 16px;">
                             <div class="relative flex place-items-start flex-nowrap flex-col w-auto p-4 space-y-4 ">
@@ -222,40 +229,40 @@
                                         App Contributors
                                     </h4>
                                     <div class="sm:grid sm:grid-cols-3 sm:gap-4 mt-5">
-                                        <div class="flex flex-row items-center p-4 w-full h-full">
-                                            <img src="img/Ellipse 55.png" class="w-16 h-16 m-2" alt="">
-                                            <span class="block">
-                                                <p>Jed Adrian Denosta</p>
-                                                <p class="text-xs">Project Leader, UX/UI Designer</p>
-                                            </span>
+                                        <div class="flex flex-col items-center p-4 w-auto h-full">
+                                            <img src="img/app-contributors/Jed.jpg" class="w-20 h-20 m-2 rounded-full" alt="">
+                                            <div class="flex flex-col justify-center">
+                                                <p class="text-base font-medium flex justify-center text-center">Jed Adrian Denosta</p>
+                                                <p class="text-xs flex justify-center text-center">Project Leader, Front-end Developer, UX/UI Designer</p>
+                                            </div>
                                         </div>
-                                        <div class="flex flex-row items-center p-4 w-full h-full">
-                                            <img src="img/Ellipse 55.png" class="w-16 h-16 m-2" alt="">
-                                            <span class="block">
-                                                <p>Natalie Jane Pacificar</p>
-                                                <p class="text-xs">Back-end Developer</p>
-                                            </span>
+                                        <div class="flex flex-col items-center p-4 w-full h-full">
+                                            <img src="img/app-contributors/Natalie.jpg" class="w-20 h-20 m-2 rounded-full" alt="">
+                                            <div class="flex flex-col justify-center">
+                                                <p class="text-base font-medium flex justify-center text-center">Natalie Jane Pacificar</p>
+                                                <p class="text-xs flex justify-center text-center">Back-end Developer, Database Administrator</p>
+                                            </div>
                                         </div>
-                                        <div class="flex flex-row items-center p-4 w-full h-full">
-                                            <img src="img/Ellipse 55.png" class="w-16 h-16 m-2" alt="">
-                                            <span class="block">
-                                                <p>Eduardo Bentain III</p>
-                                                <p class="text-xs">Back-end Developer</p>
-                                            </span>
+                                        <div class="flex flex-col items-center p-4 w-full h-full">
+                                            <img src="img/app-contributors/SJ.jpg" class="w-20 h-20 m-2 rounded-full" alt="">
+                                            <div class="flex flex-col justify-center">
+                                                <p class="text-base font-medium flex justify-center text-center">Eduardo Bentain III</p>
+                                                <p class="text-xs flex justify-center text-center">Back-end Developer</p>
+                                            </div>
                                         </div>
-                                        <div class="flex flex-row items-center p-4 w-full h-full">
-                                            <img src="img/Ellipse 55.png" class="w-16 h-16 m-2" alt="">
-                                            <span class="block">
-                                                <p>Julliane Pearl Camarista</p>
-                                                <p class="text-xs">Front-end Developer</p>
-                                            </span>
+                                        <div class="flex flex-col items-center p-4 w-full h-full">
+                                            <img src="img/app-contributors/Julliane.jpg" class="w-20 h-20 m-2 rounded-full" alt="">
+                                            <div class="flex flex-col justify-center">
+                                                <p class="text-base font-medium flex justify-center text-center">Julliane Pearl Camarista</p>
+                                                <p class="text-xs flex justify-center text-center">Front-end Developer</p>
+                                            </div>
                                         </div>
-                                        <div class="flex flex-row items-center p-4 w-full h-full">
-                                            <img src="img/Ellipse 55.png" class="w-16 h-16 m-2" alt="">
-                                            <span class="block">
-                                                <p>Elaisha Diana</p>
-                                                <p class="text-xs">Front-end Developer</p>
-                                            </span>
+                                        <div class="flex flex-col items-center p-4 w-full h-full">
+                                            <img src="img/app-contributors/Elaisha.jpg" class="w-20 h-20 m-2 rounded-full" alt="">
+                                            <div class="flex flex-col justify-center">
+                                                <p class="text-base font-medium flex justify-center v">Elaisha Diana</p>
+                                                <p class="text-xs flex justify-center text-center">Front-end Developer</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
