--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
                             <span class="hidden lg:inline">Vote</span>
                         </a>
                         <!-- Result -->
-                        <a href="" class="nav-item">
+                        <a href="result.html" class="nav-item">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
                                 viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd"
@@ -109,7 +109,7 @@
                 class="flex w-full h-auto flex-col flex-grow p-12 mt-auto mb-auto lg:mt-0 lg:mb-0 overflow-y-scroll text-gray-700 ">
                 <!-- Header -->
                 <div class="flex justify-between w-full">
-                    <div class="relative -ml-4 w-72 h-20 rounded-xl p-4 text-white shadow-lg sm:p-6 sm:w-7/12 sm:mt-3 sm:ml-2 sm:rounded-2xl sm:h-28 md:ml-4 md:mt-4"
+                    <div class="relative  w-72 h-20 rounded-xl p-4 text-white shadow-lg sm:p-6 sm:w-7/12 sm:mt-3 sm:ml-2 sm:rounded-2xl  md:ml-4 md:mt-4 sm:h-28 "
                         style="background: #FFA000;">
                         <div class="flex flex-col items-start ">
                             <h1
@@ -125,15 +125,15 @@
                         </div>
                     </div>
                     <a href="#">
-                        <img class="filter drop-shadow-xl mt-2 ml-6 w-16 h-16 sm:w-20 sm:h-20 sm:mt-6 sm:mr-8 md:w-24 md:h-24 md:mr-8 md:mt-6"
+                        <img class="filter drop-shadow-xl mt-3 ml-3 w-14 h-14 sm:w-20 sm:h-20 sm:mt-6 sm:mr-8 md:w-20 md:h-24 md:mr-8 md:mt-6"
                             src="img/heading-icons/Final Profile pic(1).svg" alt="" srcset="">
                     </a>
                 </div>
                 <!-- Title -->
-                <div class="flex flex-wrap p-0">
-                    <div class="w-full p-6 pl-4 pr-4">
+                <div class="flex flex-wrap mb-12 lg:p-12 lg:pt-6">
+                    <div class="w-full p-6 lg:pt-0 flex-row">
                         <h1
-                            class="text-2xl font-normal tracking-wide flex justify-center sm:text-3xl md:text-3xl lg:text-4xl sm:p-1 md:p-3 lg:p-4">
+                            class="text-2xl font-normal tracking flex justify-center sm:text-3xl md:text-4xl lg:text-4xl sm:p-1 md:p-3 lg:p-4">
                             News and Updates
                         </h1>
                     </div>
@@ -142,7 +142,7 @@
                         <!--First Content-->
                         <div class="filter backdrop-blur-3xl shadow-xl w-auto h-auto p-5 border border-white lg:w-auto lg:flex lg:place-self-center"
                             style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
-                                backdrop-filter: blur(1000px);
+                                backdrop-filter: blur(100px);
                                 border-radius: 16px;">
                             <div class=" flex place-items-start flex-nowrap flex-col w-auto p-3 ">
                                 <div class="w-full relative flex flex-nowrap justify-start items-center">
@@ -188,7 +188,7 @@
                         <!--First Content-->
                         <div class="filter backdrop-blur-3xl shadow-xl w-auto h-auto p-5 border border-white lg:w-auto lg:flex lg:place-self-center"
                             style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
-                                backdrop-filter: blur(1000px);
+                                backdrop-filter: blur(100px);
                                 border-radius: 16px;">
                             <div class=" flex place-items-start flex-nowrap flex-col w-auto p-3 ">
                                 <div class="w-full relative flex flex-nowrap justify-start items-center">
