--- a/about.html
+++ b/about.html
@@ -233,7 +233,7 @@
                                             <img src="img/app-contributors/Jed.jpg" class="w-20 h-20 m-2 rounded-full" alt="">
                                             <div class="flex flex-col justify-center">
                                                 <p class="text-base font-medium flex justify-center text-center">Jed Adrian Denosta</p>
-                                                <p class="text-xs flex justify-center text-center">Project Leader, Front-end Developer, UX/UI Designer</p>
+                                                <p class="text-xs flex justify-center text-center">Project Leader, UX/UI Designer</p>
                                             </div>
                                         </div>
                                         <div class="flex flex-col items-center p-4 w-full h-full">
