--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 <!-- Body Class -->
 
-<body class="font-body" style="font-display: swap;">
+<body class="font-body" style="font-display: swap; color: #333333;">
     <!-- Main Container -->
     <div class="relative h-screen w-full overflow-hidden">
         <!-- Background-->
@@ -35,7 +35,7 @@
                     class="flex flex-col w-full h-full justify-evenly items-center text-xl font-normal text-white lg:p-12 lg:pt-0">
                     <!-- Main Logo -->
                     <a href="error.html" class="hidden lg:block">
-                        <img class="object-top filter drop-shadow-lg" src="img/Main Logo.svg" alt="">
+                        <img class="object-top filter drop-shadow-lg lg:-mt-14" src="img/Main Logo.svg" alt="">
                         <p class="filter drop-shadow-xl text-2xl flex justify-center font-light tracking-wide"
                             style="color: #16BDCA;">
                             Pollice
@@ -83,13 +83,6 @@
                             </svg>
                             <span class="hidden lg:inline">About</span>
                         </a>
-                        <!--Profile-->
-                        <a href="userprofile.html" class="nav-item">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
-                              </svg>
-                            <span class="hidden lg:inline">Profile</span>
-                        </a>
                     </div>
                 </nav>
             </div>
@@ -113,7 +106,7 @@
                                 srcset="" style="right: 8px">
                         </div>
                     </div>
-                    <a href="#">
+                    <a href="userprofile.html">
                         <img class="filter drop-shadow-xl mt-3 ml-3 w-14 h-14 sm:w-20 sm:h-20 sm:mt-6 sm:mr-8 md:w-20 md:h-24 md:mr-8 md:mt-6"
                             src="img/heading-icons/Final Profile pic(1).svg" alt="" srcset="">
                     </a>
@@ -222,14 +215,14 @@
                                             <img src="img/app-contributors/Jed.jpg" class="w-20 h-20 m-2 rounded-full" alt="">
                                             <div class="flex flex-col justify-center">
                                                 <p class="text-base font-medium flex justify-center text-center">Jed Adrian Denosta</p>
-                                                <p class="text-xs flex justify-center text-center">Project Leader, UX/UI Designer</p>
+                                                <p class="text-xs flex justify-center text-center">Project Leader, <br> UX/UI Designer, <br> Front-end Developer</p>
                                             </div>
                                         </div>
                                         <div class="flex flex-col items-center p-4 w-full h-full">
                                             <img src="img/app-contributors/Natalie.jpg" class="w-20 h-20 m-2 rounded-full" alt="">
                                             <div class="flex flex-col justify-center">
                                                 <p class="text-base font-medium flex justify-center text-center">Natalie Jane Pacificar</p>
-                                                <p class="text-xs flex justify-center text-center">Back-end Developer, Database Administrator</p>
+                                                <p class="text-xs flex justify-center text-center">Back-end Developer, <br> Database Administrator</p>
                                             </div>
                                         </div>
                                         <div class="flex flex-col items-center p-4 w-full h-full">
