--- a/error.html
+++ b/error.html
@@ -33,16 +33,19 @@
                             <p class="flex justify-center text-base md:text-lg lg:text-xl lg:tracking-wider">Page not
                                 Found</p>
                             <p
-                                class="flex justify-center p-2 w-80 text-xs font-extralight md:p-8 md:text-sm lg:text-base">
+                                class="flex justify-center text-center p-2 w-80 text-xs font-extralight md:p-8 md:text-sm lg:text-base">
                                 Sorry! We couldn’t find the<br> page you’re looking for.
                             </p>
                         </div>
                         <!--Button-->
                         <a href="home.html" class="">
                             <button
-                                class="bg-indigo-700 text-white w-auto flex justify-center p-4 pl-12 pr-12 mt-10 rounded-xl lg:p-6 lg:pl-14 lg:pr-14 
-                            lg:transition lg:duration-500 lg:ease-in-out lg:transform lg:hover:-translate-y-1 lg:hover:scale-110">
-                                <p class="text-base md:text-lg lg:text-xl">Back Home</p>
+                                class="text-white w-auto flex justify-center items-center p-4 pl-12 pr-12 mt-10 rounded-xl lg:p-6 lg:pl-14 lg:pr-14 
+                            lg:transition lg:duration-500 lg:ease-in-out lg:transform lg:hover:-translate-y-1 lg:hover:scale-110" style="background: #4338ca;">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
+                              </svg>
+                                <p class="text-lg md:text-xl">Back Home</p>
                             </button>
                         </a>
                     </div>
