--- a/userprofile.html
+++ b/userprofile.html
@@ -13,7 +13,7 @@
 
 <!-- Body Class -->
 
-<body class="font-body" >
+<body class="font-body" style="font-display: swap; color: #333333;">
     <!-- Main Container -->
     <div class="relative h-screen w-full overflow-hidden">
         <!-- Background-->
@@ -36,7 +36,7 @@
                     class="flex flex-col w-full h-full justify-evenly items-center text-xl font-normal text-white lg:p-12 lg:pt-0">
                     <!-- Main Logo -->
                     <a href="error.html" class="hidden lg:block">
-                        <img class="object-top filter drop-shadow-lg" src="img/Main Logo.svg" alt="">
+                        <img class="object-top filter drop-shadow-lg lg:-mt-14" src="img/Main Logo.svg" alt="">
                         <p class="filter drop-shadow-xl text-2xl flex justify-center font-light tracking-wide"
                             style="color: #16BDCA;">
                             Pollice
@@ -84,120 +84,120 @@
                             </svg>
                             <span class="hidden lg:inline">About</span>
                         </a>
-                        <!--Profile-->
-                        <a href="userprofile.html" class="nav-item-active">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
-                              </svg>
-                            <span class="hidden lg:inline">Profile</span>
-                        </a>
                     </div>
                 </nav>
             </div>
             <!-- Main Body -->
             <div
-                class="flex w-full h-auto flex-col flex-grow p-8 pl-0 pr-0 mt-auto mb-auto lg:mt-0 lg:mb-0 overflow-y-scroll text-gray-700 ">
+                class="flex w-auto h-auto flex-col flex-grow p-8 pl-0 pr-0 mt-auto mb-auto lg:mt-0 lg:mb-0 overflow-y-scroll text-gray-700 ">
                 <!--Body-->
-                <div class="pb-0">
+                <div class="md:pb-14">
                     <!--Back Button-->
-                    <a href="" class="flex justify-end p-3 pt-0 pr-8 pb-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" viewBox="0 0 20 20" fill="#333333">
+                    <a href="home.html" class="flex justify-end p-3 pt-0 pr-8 pb-2
+                    md:pr-12 md:pt-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 lg:h-14 lg:w-14" viewBox="0 0 20 20" fill="#333333">
                             <path fill-rule="evenodd"
                                 d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
                                 clip-rule="evenodd" />
                         </svg>
                     </a>
                     <!--Profile Title-->
-                    <h1 class="text-2xl font-bold ml-12 mb-8" style="color: #333333;">
+                    <h1 class="text-2xl font-bold ml-12 mb-8 
+                    md:text-3xl md:ml-14
+                    lg:ml-24" style="color: #333333;">
                         Profile
                     </h1>
                     <!--Profile Picture-->
                     <div class="relative w-full flex justify-center justify-self-center" style="z-index: 20;">
-                        <img class="absolute w-28 h-28 filter drop-shadow-xl"
+                        <img class="absolute w-28 h-28 filter drop-shadow-xl mt-6"
                             src="img/heading-icons/Final Profile pic(1).svg" alt="">
                     </div>
                     <!--White Background-->
-                    <div class="mb-0 w-auto bg-white pb-0 mt-16 p-6 sm:p-10 sm:pt-6 md:p-16 md:pb-10 md:pt-6 rounded-t-3xl " style="z-index: 10; color: #333333;">
-                        <!--Name and Email-->
-                        <div class="static flex justify-center">
-                            <h1 class="mt-8 text-2xl font-medium">Anna Marie Flores</h1>
-                        </div>
-                        <p class="flex justify-center text-xs">annamarieflores@wvsu.edu.ph</p>
-                        <div class="p-6">
-                            <!--Edit Profile-->
-                            <a href="" class="w-full text-center">
-                                <p class="rounded-sm text-xs p-1" style="border: 0.3px solid #333333;
-                                box-sizing: border-box;
-                                filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-                                border-radius: 5px;">
-                                    Edit Profile
-                                </p>
-                            </a>
-                            <!--About-->
-                            <span class="p-1">
-                                <h1 class="text-lg font-medium mb-1 mt-6">About</h1>
-                                <p class="text-xs" style="font-size: 11px;line-height: 13px;">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum velit
-                                    lorem bibendumscelerisque curabitur gravida diam ut. Ut risus, aliquam urna,
-                                    sagittis,
-                                    fusce
-                                    cras nunc.
-                                    Quis sed in ut vitae. Lacus, mauris ipsum posuere eget aliquam.</p>
-                            </span>
-                            <!--Intro-->
-                            <span>
-                                <h1 class="text-lg font-medium mb-1 mt-6">Intro</h1>
-                                <div>
-                                    <div class="p-2 pl-0 flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20"
-                                            fill="currentColor">
-                                            <path
-                                                d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z" />
-                                        </svg>
-                                        <p class="ml-2 text-xs">Bachelor of Science in Computer Science</p>
+                    <div class="p-8 md:pb-0 md:px-14 lg:px-24">
+                        <div class="mb-0 w-auto h-full bg-white pb-0 mt-16 p-6 sm:p-10 sm:pt-6 md:p-16 md:pb-10 md:pt-6 rounded-3xl md:rounded-3xl md:mb-0 "
+                            style="z-index: 10; color: #333333;">
+                            <!--Name and Email-->
+                            <div class="static flex justify-center">
+                                <h1 class="mt-8 text-2xl font-medium md:text-3xl">Anna Marie Flores</h1>
+                            </div>
+                            <p class="flex justify-center text-xs md:text-sm">annamarieflores@wvsu.edu.ph</p>
+                            <div class="p-6">
+                                <!--Edit Profile-->
+                                <a href="" class="w-full text-center lg:flex lg:flex-row lg:justify-center ">
+                                    <p class="rounded-sm text-xs p-1 md:text-sm lg:w-3/4" style="border: 0.3px solid #333333;
+                                    box-sizing: border-box;
+                                    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+                                    border-radius: 5px;">
+                                        Edit Profile
+                                    </p>
+                                </a>
+                                <!--About-->
+                                <span class="p-1 space-y-2 md:space-y-4">
+                                    <h1 class="text-lg font-medium md:text-xl">About</h1>
+                                    <p class="text-xs md:text-sm">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum velit
+                                        lorem bibendumscelerisque curabitur gravida diam ut. Ut risus, aliquam urna,
+                                        sagittis,
+                                        fusce
+                                        cras nunc.
+                                        Quis sed in ut vitae. Lacus, mauris ipsum posuere eget aliquam.
+                                    </p>
+                                </span>
+                                <!--Intro-->
+                                <span class="space-y-2 md:space-y-4">
+                                    <h1 class="text-lg font-medium md:text-xl">Intro</h1>
+                                    <div class="space-y-2 md:space-y-4">
+                                        <div class="flex items-center">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
+                                                fill="currentColor">
+                                                <path
+                                                    d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z" />
+                                            </svg>
+                                            <p class="ml-2 text-xs md:text-sm">Bachelor of Science in Computer Science</p>
+                                        </div>
+                                        <div class="flex items-center">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
+                                                fill="currentColor">
+                                                <path fill-rule="evenodd"
+                                                    d="M2 5a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm14 1a1 1 0 11-2 0 1 1 0 012 0zM2 13a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2zm14 1a1 1 0 11-2 0 1 1 0 012 0z"
+                                                    clip-rule="evenodd" />
+                                            </svg>
+                                            <p class="ml-2 text-xs md:text-sm">2nd Year</p>
+                                        </div>
+                                        <div class="flex items-center">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
+                                                fill="currentColor">
+                                                <path fill-rule="evenodd"
+                                                    d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
+                                                    clip-rule="evenodd" />
+                                            </svg>
+                                            <p class="ml-2 text-xs md:text-base">Alta Tierra Village, Jaro, Iloilo City 5000</p>
+                                        </div>
+                                        <div class="flex items-center">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
+                                                fill="currentColor">
+                                                <path fill-rule="evenodd"
+                                                    d="M6 3a1 1 0 011-1h.01a1 1 0 010 2H7a1 1 0 01-1-1zm2 3a1 1 0 00-2 0v1a2 2 0 00-2 2v1a2 2 0 00-2 2v.683a3.7 3.7 0 011.055.485 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0A3.7 3.7 0 0118 12.683V12a2 2 0 00-2-2V9a2 2 0 00-2-2V6a1 1 0 10-2 0v1h-1V6a1 1 0 10-2 0v1H8V6zm10 8.868a3.704 3.704 0 01-4.055-.036 1.704 1.704 0 00-1.89 0 3.704 3.704 0 01-4.11 0 1.704 1.704 0 00-1.89 0A3.704 3.704 0 012 14.868V17a1 1 0 001 1h14a1 1 0 001-1v-2.132zM9 3a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1zm3 0a1 1 0 011-1h.01a1 1 0 110 2H13a1 1 0 01-1-1z"
+                                                    clip-rule="evenodd" />
+                                            </svg>
+                                            <p class="ml-2 text-xs md:text-sm">August 8, 2000</p>
+                                        </div>
                                     </div>
-                                    <div class="p-2 pl-0 flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20"
-                                            fill="currentColor">
+                                </span>
+                                <!--Log out Button-->
+                                <div class="flex justify-end mt-4 md:mt-8">
+                                    <button class="flex items-center justify-center transition duration-500 ease-in-out hover:bg-indigo-600 transform hover:-translate-y-1 hover:scale-110 rounded-xl p-3 pt-2 pb-2 pl-4 pr-4 text-white text-lg bg-indigo-700 
+                                        lg:transition lg:duration-300 lg:ease-in-out lg:transform lg:hover:-translate-y-1 lg:hover:scale-110
+                                        md:p-4 md:pt-4 md:pb-4 md:pl-6 md:pr-6">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 md:h-6 md:w-6"
+                                            viewBox="0 0 20 20" fill="currentColor">
                                             <path fill-rule="evenodd"
-                                                d="M2 5a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm14 1a1 1 0 11-2 0 1 1 0 012 0zM2 13a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2zm14 1a1 1 0 11-2 0 1 1 0 012 0z"
+                                                d="M3 3a1 1 0 00-1 1v12a1 1 0 102 0V4a1 1 0 00-1-1zm10.293 9.293a1 1 0 001.414 1.414l3-3a1 1 0 000-1.414l-3-3a1 1 0 10-1.414 1.414L14.586 9H7a1 1 0 100 2h7.586l-1.293 1.293z"
                                                 clip-rule="evenodd" />
                                         </svg>
-                                        <p class="ml-2 text-xs">2nd Year</p>
-                                    </div>
-                                    <div class="p-2 pl-0 flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20"
-                                            fill="currentColor">
-                                            <path fill-rule="evenodd"
-                                                d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                        <p class="ml-2 text-xs">Alta Tierra Village, Jaro, Iloilo City 5000</p>
-                                    </div>
-                                    <div class="p-2 pl-0 flex items-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20"
-                                            fill="currentColor">
-                                            <path fill-rule="evenodd"
-                                                d="M6 3a1 1 0 011-1h.01a1 1 0 010 2H7a1 1 0 01-1-1zm2 3a1 1 0 00-2 0v1a2 2 0 00-2 2v1a2 2 0 00-2 2v.683a3.7 3.7 0 011.055.485 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0A3.7 3.7 0 0118 12.683V12a2 2 0 00-2-2V9a2 2 0 00-2-2V6a1 1 0 10-2 0v1h-1V6a1 1 0 10-2 0v1H8V6zm10 8.868a3.704 3.704 0 01-4.055-.036 1.704 1.704 0 00-1.89 0 3.704 3.704 0 01-4.11 0 1.704 1.704 0 00-1.89 0A3.704 3.704 0 012 14.868V17a1 1 0 001 1h14a1 1 0 001-1v-2.132zM9 3a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1zm3 0a1 1 0 011-1h.01a1 1 0 110 2H13a1 1 0 01-1-1z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                        <p class="ml-2 text-xs">August 8, 2000</p>
-                                    </div>
+                                        <p class="text-sm md:text-base">Log out</p>
+                                    </button>
                                 </div>
-                            </span>
-                            <!--Log out Button-->
-                            <div class="flex justify-end pt-4">
-                                <button
-                                    class="flex items-center justify-center transition duration-500 ease-in-out hover:bg-indigo-600 transform hover:-translate-y-1 hover:scale-110 rounded-xl p-3 pt-2 pb-2 pl-4 pr-4 text-white text-lg bg-indigo-700 
-                                lg:transition lg:duration-300 lg:ease-in-out lg:transform lg:hover:-translate-y-1 lg:hover:scale-110">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                                        fill="currentColor">
-                                        <path fill-rule="evenodd"
-                                            d="M3 3a1 1 0 00-1 1v12a1 1 0 102 0V4a1 1 0 00-1-1zm10.293 9.293a1 1 0 001.414 1.414l3-3a1 1 0 000-1.414l-3-3a1 1 0 10-1.414 1.414L14.586 9H7a1 1 0 100 2h7.586l-1.293 1.293z"
-                                            clip-rule="evenodd" />
-                                    </svg>
-                                    <p class="text-sm">Log out</p>
-                                </button>
                             </div>
                         </div>
                     </div>
