--- a/error.html
+++ b/error.html
@@ -22,7 +22,7 @@
                 <div class="flex flex-col justify-center items-center lg:flex lg:flex-row lg:justify-start">
                     <!--Image-->
                     <button class="lg:transition lg:duration-500 lg:ease-in-out lg:transform lg:hover:-translate-y-1 lg:hover:scale-110">
-                        <a href="home.html">
+                        <a href="userHome.html">
                             <img class=" w-full h-full" src="img/errorPage /404.svg" alt="" srcset="">
                         </a>
                     </button>
@@ -38,7 +38,7 @@
                             </p>
                         </div>
                         <!--Button-->
-                        <a href="home.html" class="">
+                        <a href="userHome.html" class="">
                             <button
                                 class="text-white w-auto flex justify-center items-center p-4 pl-12 pr-12 mt-10 rounded-xl lg:p-6 lg:pl-14 lg:pr-14 
                             lg:transition lg:duration-500 lg:ease-in-out lg:transform lg:hover:-translate-y-1 lg:hover:scale-110" style="background: #4338ca;">
