--- a/adminProfile.html
+++ b/adminProfile.html
@@ -13,7 +13,7 @@
 
 <!-- Body Class -->
 
-<body class="font-body" style="font-display: swap; color: #333333;">
+<body class="font-body subpixel-antialiased" style="font-display: swap; color: #333333;">
     <!-- Main Container -->
     <div class="relative h-screen w-full overflow-hidden">
         <!-- Background-->
@@ -45,44 +45,44 @@
                     <!-- Flex List Of NavLinks -->
                     <div
                         class="flex w-full flex-row justify-around items-center py-3 px-3 sm:flex sm:justify-around lg:flex-col lg:space-y-10 lg:items-start lg:place-content-center">
-                        <!-- Home -->
-                        <a href="userHome.html" class="nav-item">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
-                                <path
-                                    d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
-                            </svg>
-                            <span class="hidden lg:inline">Home</span>
-                        </a>
-                        <!-- Vote -->
-                        <a href="userVote.html" class="nav-item">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
-                                <path
-                                    d="M5 3a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2V5a2 2 0 00-2-2H5zM5 11a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2v-2a2 2 0 00-2-2H5zM11 5a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V5zM14 11a1 1 0 011 1v1h1a1 1 0 110 2h-1v1a1 1 0 11-2 0v-1h-1a1 1 0 110-2h1v-1a1 1 0 011-1z" />
-                            </svg>
-                            <span class="hidden lg:inline">Vote</span>
-                        </a>
-                        <!-- Result -->
-                        <a href="userResult.html" class="nav-item">
+                        <!-- Add -->
+                        <a href="adminAdd.html" class="nav-item">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
                                 viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd"
-                                    d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3zm11 4a1 1 0 10-2 0v4a1 1 0 102 0V7zm-3 1a1 1 0 10-2 0v3a1 1 0 102 0V8zM8 9a1 1 0 00-2 0v2a1 1 0 102 0V9z"
+                                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z"
                                     clip-rule="evenodd" />
                             </svg>
-                            <span class="hidden lg:inline">Result</span>
+                            <span class="hidden lg:inline">Add</span>
                         </a>
-                        <!-- About -->
-                        <a href="userAbout.html" class="nav-item">
+                        <!-- Delete -->
+                        <a href="adminDelete.html" class="nav-item">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
                                 viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd"
-                                    d="M2 5a2 2 0 012-2h8a2 2 0 012 2v10a2 2 0 002 2H4a2 2 0 01-2-2V5zm3 1h6v4H5V6zm6 6H5v2h6v-2z"
+                                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                                     clip-rule="evenodd" />
-                                <path d="M15 7h1a2 2 0 012 2v5.5a1.5 1.5 0 01-3 0V7z" />
                             </svg>
-                            <span class="hidden lg:inline">About</span>
+                            <span class="hidden lg:inline">Delete</span>
+                        </a>
+                        <!-- Update -->
+                        <a href="adminUpdate.html" class="nav-item">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
+                                viewBox="0 0 20 20" fill="currentColor">
+                                <path
+                                    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                            </svg>
+                            <span class="hidden lg:inline">Update</span>
+                        </a>
+                        <!-- View -->
+                        <a href="adminView.html" class="nav-item">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
+                                viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd"
+                                    d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <span class="hidden lg:inline">View</span>
                         </a>
                     </div>
                 </nav>
@@ -93,9 +93,10 @@
                 <!--Body-->
                 <div class="md:pb-14">
                     <!--Back Button-->
-                    <a href="userHome.html" class="flex justify-end p-3 pt-0 pr-8 pb-2
+                    <a href="adminAdd.html" class="flex justify-end p-3 pt-0 pr-8 pb-2
                     md:pr-12 md:pt-3">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 lg:h-14 lg:w-14" viewBox="0 0 20 20" fill="#333333">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 lg:h-14 lg:w-14" viewBox="0 0 20 20"
+                            fill="#333333">
                             <path fill-rule="evenodd"
                                 d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
                                 clip-rule="evenodd" />
@@ -148,15 +149,18 @@
                                     <h1 class="text-lg font-medium md:text-xl">Intro</h1>
                                     <div class="space-y-2 md:space-y-4">
                                         <div class="flex items-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
+                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
                                                 fill="currentColor">
                                                 <path
                                                     d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z" />
                                             </svg>
-                                            <p class="ml-2 text-xs md:text-sm">Bachelor of Science in Computer Science</p>
+                                            <p class="ml-2 text-xs md:text-sm">Bachelor of Science in Computer Science
+                                            </p>
                                         </div>
                                         <div class="flex items-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
+                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
                                                 fill="currentColor">
                                                 <path fill-rule="evenodd"
                                                     d="M2 5a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm14 1a1 1 0 11-2 0 1 1 0 012 0zM2 13a2 2 0 012-2h12a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2zm14 1a1 1 0 11-2 0 1 1 0 012 0z"
@@ -165,16 +169,19 @@
                                             <p class="ml-2 text-xs md:text-sm">2nd Year</p>
                                         </div>
                                         <div class="flex items-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
+                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
                                                 fill="currentColor">
                                                 <path fill-rule="evenodd"
                                                     d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
                                                     clip-rule="evenodd" />
                                             </svg>
-                                            <p class="ml-2 text-xs md:text-base">Alta Tierra Village, Jaro, Iloilo City 5000</p>
+                                            <p class="ml-2 text-xs md:text-base">Alta Tierra Village, Jaro, Iloilo City
+                                                5000</p>
                                         </div>
                                         <div class="flex items-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
+                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                class="h-7 w-7 md:h-9 md:w-9 lg:h-10 lg:w-10" viewBox="0 0 20 20"
                                                 fill="currentColor">
                                                 <path fill-rule="evenodd"
                                                     d="M6 3a1 1 0 011-1h.01a1 1 0 010 2H7a1 1 0 01-1-1zm2 3a1 1 0 00-2 0v1a2 2 0 00-2 2v1a2 2 0 00-2 2v.683a3.7 3.7 0 011.055.485 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0A3.7 3.7 0 0118 12.683V12a2 2 0 00-2-2V9a2 2 0 00-2-2V6a1 1 0 10-2 0v1h-1V6a1 1 0 10-2 0v1H8V6zm10 8.868a3.704 3.704 0 01-4.055-.036 1.704 1.704 0 00-1.89 0 3.704 3.704 0 01-4.11 0 1.704 1.704 0 00-1.89 0A3.704 3.704 0 012 14.868V17a1 1 0 001 1h14a1 1 0 001-1v-2.132zM9 3a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1zm3 0a1 1 0 011-1h.01a1 1 0 110 2H13a1 1 0 01-1-1z"
