--- a/userResult.html
+++ b/userResult.html
@@ -34,7 +34,7 @@
                 <nav
                     class="flex flex-col w-full h-full justify-evenly items-center text-xl font-normal text-white lg:p-12 lg:pt-0">
                     <!-- Main Logo -->
-                    <a href="error.html" class="hidden lg:block">
+                    <a href="#" class="hidden lg:block">
                         <img class="object-top filter drop-shadow-lg lg:-mt-14" src="img/Main Logo.svg" alt="">
                         <p class="filter drop-shadow-xl text-2xl flex justify-center font-light tracking-wide"
                             style="color: #16BDCA;">
@@ -45,7 +45,7 @@
                     <div
                         class="flex w-full flex-row justify-around items-center py-3 px-3 sm:flex sm:justify-around lg:flex-col lg:space-y-10 lg:items-start lg:place-content-center">
                         <!-- Home -->
-                        <a href="home.html" class="nav-item">
+                        <a href="userHome.html" class="nav-item">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
                                 viewBox="0 0 20 20" fill="currentColor">
                                 <path
@@ -54,7 +54,7 @@
                             <span class="hidden lg:inline">Home</span>
                         </a>
                         <!-- Vote -->
-                        <a href="vote.html" class="nav-item">
+                        <a href="userVote.html" class="nav-item">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
                                 viewBox="0 0 20 20" fill="currentColor">
                                 <path
@@ -63,7 +63,7 @@
                             <span class="hidden lg:inline">Vote</span>
                         </a>
                         <!-- Result -->
-                        <a href="result.html" class="nav-item-active">
+                        <a href="userResult.html" class="nav-item-active">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
                                 viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd"
@@ -73,7 +73,7 @@
                             <span class="hidden lg:inline">Result</span>
                         </a>
                         <!-- About -->
-                        <a href="about.html" class="nav-item">
+                        <a href="userAbout.html" class="nav-item">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
                                 viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd"
@@ -106,7 +106,7 @@
                                 srcset="" style="right: 8px">
                         </div>
                     </div>
-                    <a href="userprofile.html">
+                    <a href="userProfile.html">
                         <img class="filter drop-shadow-xl mt-3 ml-3 w-14 h-14 sm:w-20 sm:h-20 sm:mt-6 sm:mr-8 md:w-20 md:h-24 md:mr-8 md:mt-6"
                             src="img/heading-icons/Final Profile pic(1).svg" alt="" srcset="">
                     </a>
@@ -287,7 +287,7 @@
                                 border-radius: 16px;">
                             <!--First Content-->
                             <div class="flex items-center flex-col w-auto h-auto">
-                                <h4 class="flex flex-col justify-center w-auto h-auto p-3 mb-1 pl-7 pr-7 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
+                                <h4 class="flex flex-col justify-center text-center w-auto h-auto p-3 mb-1 pl-7 pr-7 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
                                 style="background: #4338ca;">
                                     Assistant Secretary
                                 </h4>
@@ -387,7 +387,7 @@
                                 border-radius: 16px;">
                             <!--First Content-->
                             <div class="flex items-center flex-col w-auto h-auto">
-                                <h4 class="flex flex-col justify-center w-auto h-auto p-3 mb-1 pl-7 pr-7 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
+                                <h4 class="flex flex-col justify-center text-center w-auto h-auto p-3 mb-1 pl-7 pr-7 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
                                 style="background: #4338ca;">
                                     Assistant Treasurer
                                 </h4>
@@ -739,7 +739,7 @@
                             <div class="flex items-center flex-col w-auto h-auto">
                                 <h4 class="flex flex-col justify-center text-center w-auto h-auto p-3 mb-1 pl-5 pr-5 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
                                 style="background: #4338ca;">
-                                    BSCS Representative
+                                    Representative 1
                                 </h4>
                                 <form action="/action_page.php" class="mt-4 mb-2">
                                     <div
@@ -789,157 +789,7 @@
                             <div class="flex items-center flex-col w-auto h-auto">
                                 <h4 class="flex flex-col justify-center text-center w-auto h-auto p-3 mb-1 pl-5 pr-5 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
                                 style="background: #4338ca;">
-                                    BSIT Representative
-                                </h4>
-                                <form action="/action_page.php" class="mt-4 mb-2">
-                                    <div
-                                        class="w-auto h-auto text-white text-xs grid grid-cols-1 gap-1 md:text-sm p-4 pt-2">
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-pink-400 to-pink-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Jane Cooper</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        50%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-purple-400 to-purple-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Eleanor Pena</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        35%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-blue-400 to-blue-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Jenny Wilson</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        25%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="filter backdrop-blur-3xl w-full h-full p-6 pl-4 pr-4 border order-first border-white shadow-xl"
-                            style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
-                                backdrop-filter: blur(1000px);
-                                border-radius: 16px;">
-                            <!--First Content-->
-                            <div class="flex items-center flex-col w-auto h-auto">
-                                <h4 class="flex flex-col justify-center text-center w-auto h-auto p-3 mb-1 pl-5 pr-5 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
-                                style="background: #4338ca;">
-                                    BSIS Representative
-                                </h4>
-                                <form action="/action_page.php" class="mt-4 mb-2">
-                                    <div
-                                        class="w-auto h-auto text-white text-xs grid grid-cols-1 gap-1 md:text-sm p-4 pt-2">
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-pink-400 to-pink-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Jane Cooper</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        50%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-purple-400 to-purple-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Eleanor Pena</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        35%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-blue-400 to-blue-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Jenny Wilson</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        25%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="filter backdrop-blur-3xl w-full h-full p-6 pl-4 pr-4 border order-first border-white shadow-xl"
-                            style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
-                                backdrop-filter: blur(1000px);
-                                border-radius: 16px;">
-                            <!--First Content-->
-                            <div class="flex items-center flex-col w-auto h-auto">
-                                <h4 class="flex flex-col justify-center text-center w-auto h-auto p-3 mb-1 pl-5 pr-5 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
-                                style="background: #4338ca;">
-                                    BSEMC Representative
-                                </h4>
-                                <form action="/action_page.php" class="mt-4 mb-2">
-                                    <div
-                                        class="w-auto h-auto text-white text-xs grid grid-cols-1 gap-1 md:text-sm p-4 pt-2">
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-pink-400 to-pink-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Jane Cooper</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        50%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-purple-400 to-purple-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Eleanor Pena</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        35%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                        <label class="w-auto h-auto flex justify-center bg-gradient-to-r from-blue-400 to-blue-300 p-2 pr-4 pl-4 rounded-sm tracking-wide filter drop-shadow-md">
-                                            <span class="grid grid-cols-2">
-                                                <input type="hidden" name="light" checked>
-                                                <span class="w-40 row-span-2 col-start-1 items-center justify-items-center text-sm">Jenny Wilson</span>
-                                                <span class="w-auto flex justify-end text-sm">
-                                                    <span class=" p-0 pl-2 pr-2">
-                                                        25%
-                                                    </span>
-                                                </span>
-                                            </span>
-                                        </label>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="filter backdrop-blur-3xl w-full h-full p-6 pl-4 pr-4 border order-first border-white shadow-xl"
-                            style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
-                                backdrop-filter: blur(1000px);
-                                border-radius: 16px;">
-                            <!--First Content-->
-                            <div class="flex items-center flex-col w-auto h-auto">
-                                <h4 class="flex flex-col justify-center text-center w-auto h-auto p-3 mb-1 pl-5 pr-5 tracking-wider rounded-lg text-white text-lg sm:w-auto md:text-lg filter drop-shadow-lg"
-                                style="background: #4338ca;">
-                                    BLIS Representative
+                                    Representative 2
                                 </h4>
                                 <form action="/action_page.php" class="mt-4 mb-2">
                                     <div
