Final Change | Base 2

--- a/userBase2.html
+++ b/userBase2.html
@@ -86,6 +86,34 @@
                     </div>
                 </nav>
             </div>
+            <!-- Main Body -->
+            <div
+                class="flex w-full h-auto flex-col flex-grow p-12 mt-auto mb-auto lg:mt-0 lg:mb-0 overflow-y-scroll text-gray-700 ">
+                <!-- Header -->
+                <div class="flex justify-between w-full">
+                    <div class="relative  w-72 h-20 rounded-xl p-4 text-white shadow-lg sm:p-6 sm:w-7/12 sm:mt-3 sm:ml-2 sm:rounded-2xl  md:ml-4 md:mt-4 sm:h-28 "
+                        style="background: #FFA000;">
+                        <div class="flex flex-col items-start ">
+                            <h1
+                                class="text-2xl flex flex-row items-center font-medium tracking-wider sm:text-4xl sm:mt-1 md:text-4xl md:mt-0 lg:text-5xl lg:mt-0  ">
+                                Hello, Anna
+                            </h1>
+                            <p
+                                class="flex flex-row items-center font-thin text-xs -mt-1 tracking-wide sm:tracking-wider sm:text-sm md:text-base lg:tracking-widest ">
+                                Welcome back to Pollice!
+                            </p>
+                            <img class="absolute bottom-0 h-32 sm:h-44" src="img/heading-icons/HandNav.svg" alt=""
+                                srcset="" style="right: 8px">
+                        </div>
+                    </div>
+                    <a href="userProfile.html">
+                        <img class="filter drop-shadow-xl mt-3 ml-3 w-14 h-14 sm:w-20 sm:h-20 sm:mt-6 sm:mr-8 md:w-20 md:h-24 md:mr-8 md:mt-6"
+                            src="img/heading-icons/Final Profile pic(1).svg" alt="" srcset="">
+                    </a>
+                </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
