Final Change | R1 and R2

--- a/adminUpdate.html
+++ b/adminUpdate.html
@@ -273,8 +273,8 @@
                                                 <option value="bscs_representative">BSCS Representative</option>
                                                 <option value="bsit_representative">BSIT Representative</option>
                                                 <option value="bsis_representative">BSIS Representative</option>
-                                                <option value="bsemc_representative">BSEMC Representative</option>
-                                                <option value="blis_representative">BLIS Representative</option>
+                                                <option value="representative_1">Representative 1</option>
+                                                <option value="representative_2">Representative 2</option>
                                             </select>
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 class="h-6 w-6 md:h-7 md:w-7 pointer-events-none" viewBox="0 0 20 20"
