Final Change | 4th

--- a/adminBase2.html
+++ b/adminBase2.html
@@ -106,7 +106,7 @@
                                 srcset="" style="right: 8px">
                         </div>
                     </div>
-                    <a href="adminProfile.html">
+                    <a href="#">
                         <img class="filter drop-shadow-xl mt-3 ml-3 w-14 h-14 sm:w-20 sm:h-20 sm:mt-6 sm:mr-8 md:w-20 md:h-24 md:mr-8 md:mt-6"
                             src="img/heading-icons/Final Profile pic(1).svg" alt="" srcset="">
                     </a>
