--- a/userprofile.html
+++ b/userprofile.html
@@ -123,7 +123,7 @@
                             <p class="flex justify-center text-xs md:text-sm">annamarieflores@wvsu.edu.ph</p>
                             <div class="p-6">
                                 <!--Edit Profile-->
-                                <a href="" class="w-full text-center lg:flex lg:flex-row lg:justify-center ">
+                                <a href="userEditProfile.html" class="w-full text-center lg:flex lg:flex-row lg:justify-center ">
                                     <p class="rounded-sm text-xs p-1 md:text-sm lg:w-3/4" style="border: 0.3px solid #333333;
                                     box-sizing: border-box;
                                     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
