--- a/userBase2.html
+++ b/userBase2.html
@@ -47,7 +47,7 @@
                         <!-- Home -->
                         <a href="userHome.html" class="nav-item">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
+                                viewBox="0 0 20 20" fill="#ffffff">
                                 <path
                                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
                             </svg>
