Final Change | 5th MB

--- a/userHome.html
+++ b/userHome.html
@@ -112,7 +112,7 @@
                     </a>
                 </div>
                 <!-- Title -->
-                <div class="flex flex-wrap mb-12 lg:p-12 lg:pt-6">
+                <div class="flex flex-wrap lg:p-12 lg:pt-6">
                     <div class="w-full p-6 lg:pt-0 flex-row">
                         <h1
                             class="text-2xl font-normal tracking flex justify-center sm:text-3xl md:text-4xl lg:text-4xl sm:p-1 md:p-3 lg:p-4">
@@ -120,7 +120,7 @@
                         </h1>
                     </div>
                      <!-- Content -->
-                    <div class="p-0 mb-12 sm:p-6 sm:pt-0 lg:pt-0 space-y-10">
+                    <div class="p-0 sm:p-6 sm:pt-0 lg:pt-0 space-y-10">
                         <!--First Content-->
                         <div class="filter backdrop-blur-3xl shadow-xl w-auto h-auto p-5 border border-white lg:w-auto lg:flex lg:place-self-center"
                             style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
