--- a/userVote.html
+++ b/userVote.html
@@ -810,7 +810,7 @@
                     </div>
                 </div>
                 <a href="">
-                    <div class="flex justify-end p-0 pt-0 pl-0 pb-12 lg:pr-12">
+                    <div class="flex justify-end p-0 pt-0 pl-0 lg:pr-12">
                         <button
                             class="modal-open transition duration-500 ease-in-out hover:bg-indigo-500 transform hover:-translate-y-1 hover:scale-110 rounded-xl p-3 h-14 w-36 text-white text-lg bg-indigo-600 
                         lg:text-xl lg:p-4 lg:h-16 lg:w-40 lg:transition lg:duration-300 lg:ease-in-out lg:transform lg:hover:-translate-y-1 lg:hover:scale-110">
