--- a/adminUpdate.html
+++ b/adminUpdate.html
@@ -156,9 +156,9 @@
                                         </span>
                                     </div>
                                     <!--Course-->
-                                    <div class="rounded-lg px-4 border border-white" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
+                                    <div class="relative rounded-lg px-4 border border-white" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
                                     backdrop-filter: blur(1000px);">
-                                        <div class="flex flex-row items-center relative pointer-events-auto">
+                                        <div class="flex flex-row items-center static pointer-events-auto">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-8 md:w-8"
                                                 viewBox="0 0 20 20" fill="#4338ca">
                                                 <path
@@ -177,7 +177,7 @@
                                                 <option value="blis">Bachelor of Library Science</option>
                                             </select>
                                             <svg xmlns="http://www.w3.org/2000/svg"
-                                                class="h-6 w-6 md:h-7 md:w-7 pointer-events-none" viewBox="0 0 20 20"
+                                                class="h-6 w-6 md:h-7 md:w-7 pointer-events-none absolute right-4" viewBox="0 0 20 20"
                                                 fill="currentColor">
                                                 <path fill-rule="evenodd"
                                                     d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
@@ -186,9 +186,9 @@
                                         </div>
                                     </div>
                                     <!--Section-->
-                                    <div class="rounded-lg px-4 border border-white" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
+                                    <div class="relative rounded-lg px-4 border border-white" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
                                     backdrop-filter: blur(1000px);">
-                                        <span class="flex flex-row items-center relative">
+                                        <span class="flex flex-row items-center static pointer-events-auto">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-8 md:w-8"
                                                 viewBox="0 0 20 20" fill="#4338ca">
                                                 <path fill-rule="evenodd"
@@ -209,7 +209,7 @@
                                                 <option value="4b">4-B</option>
                                             </select>
                                             <svg xmlns="http://www.w3.org/2000/svg"
-                                                class="h-6 w-6 md:h-7 md:w-7 pointer-events-auto" viewBox="0 0 20 20"
+                                                class="h-6 w-6 md:h-7 md:w-7 pointer-events-none absolute right-4" viewBox="0 0 20 20"
                                                 fill="currentColor">
                                                 <path fill-rule="evenodd"
                                                     d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
@@ -218,9 +218,9 @@
                                         </span>
                                     </div>
                                     <!--Party-->
-                                    <div class="rounded-lg px-4 border border-white" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
+                                    <div class="relative rounded-lg px-4 border border-white" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
                                     backdrop-filter: blur(1000px);">
-                                        <span class="flex flex-row items-center relative">
+                                        <span class="flex flex-row items-center static pointer-events-auto">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-8 md:w-8"
                                                 viewBox="0 0 20 20" fill="#4338ca">
                                                 <path fill-rule="evenodd"
@@ -236,7 +236,7 @@
                                                 <option value="party_3">Party 3</option>
                                             </select>
                                             <svg xmlns="http://www.w3.org/2000/svg"
-                                                class="h-6 w-6 md:h-7 md:w-7 pointer-events-none" viewBox="0 0 20 20"
+                                                class="h-6 w-6 md:h-7 md:w-7 pointer-events-none absolute right-4" viewBox="0 0 20 20"
                                                 fill="currentColor">
                                                 <path fill-rule="evenodd"
                                                     d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
@@ -245,9 +245,9 @@
                                         </span>
                                     </div>
                                     <!--Position-->
-                                    <div class="rounded-lg px-4 border border-white" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
+                                    <div class="relative rounded-lg px-4 border border-white" style=" background: linear-gradient(118.32deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.06) 100%);
                                     backdrop-filter: blur(1000px);">
-                                        <span class="flex flex-row items-center relative">
+                                        <span class="flex flex-row items-center static pointer-events-auto">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:h-8 md:w-8"
                                                 viewBox="0 0 20 20" fill="#4338ca">
                                                 <path
@@ -277,7 +277,7 @@
                                                 <option value="representative_2">Representative 2</option>
                                             </select>
                                             <svg xmlns="http://www.w3.org/2000/svg"
-                                                class="h-6 w-6 md:h-7 md:w-7 pointer-events-none" viewBox="0 0 20 20"
+                                                class="h-6 w-6 md:h-7 md:w-7 pointer-events-none absolute right-4" viewBox="0 0 20 20"
                                                 fill="currentColor">
                                                 <path fill-rule="evenodd"
                                                     d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
