--- a/userLogin.html
+++ b/userLogin.html
@@ -23,7 +23,8 @@
                 <!--Cubes-->
                 <div class="absolute top-5 -right-28 md:top-8 md:-right-40 lg:-right-56">
                     <img src="img/signInUP-icons/Cubes.svg"
-                        class="max-w-sm max-h-64 md:max-w-5xl md:max-h-96 lg:max-h-screen lg:max-w-3xl" alt="" srcset="">
+                        class="max-w-sm max-h-64 md:max-w-5xl md:max-h-96 lg:max-h-screen lg:max-w-3xl" alt=""
+                        srcset="">
                 </div>
                 <!--Form-->
                 <div class="md:w-full h-auto pt-8 px-4 md:pt-8 md:px-20 lg:px-36 space-y-0">
@@ -68,19 +69,24 @@
                             </div>
                         </div>
                         <div
-                            class="flex flex-col items-center justify-center mt-10 px-4 text-white lg:px-10 lg:flex lg:flex-col lg:items-start lg:justify-start">
-                            <button class="bg-indigo-700 hover:bg-indigo-600 text-base p-1 px-10 rounded-md w-full lg:flex lg:flex-col lg:justify-start
-                                md:p-2 md:text-lg lg:max-w-lg">
-                                Log in
-                            </button>
-                            <div class="text-sm p-1 px-10 rounded-md w-full lg:flex lg:flex-col lg:justify-start
+                            class="flex flex-col items-center justify-center mt-10 mb-10 lg:mb-0 px-4 text-white lg:px-10 lg:flex lg:flex-col lg:items-start lg:justify-start">
+                            <a href="" class="bg-indigo-700 hover:bg-indigo-600 text-base p-1 px-10 rounded-md w-full flex flex-row items-center justify-center
+                            md:p-2 md:text-lg lg:max-w-lg">
+                                <button>
+                                    Log in
+                                </button>
+                            </a>
+                            <div class="text-sm p-1 px-10 rounded-md w-full
                                 md:p-2 md:text-base lg:max-w-lg" style="color: #767a83;">
                                 <p class="flex flex-col items-center justify-center">or</p>
                             </div>
-                            <button class="border text-sm p-1 px-10 rounded-md w-full md:text-base lg:max-w-lg"
+                            <a href=""
+                                class="flex flex-col items-center justify-center border text-sm p-1 px-10 rounded-md w-full md:text-base lg:max-w-lg"
                                 style="color: #333333;">
-                                Create an Account
-                            </button>
+                                <button>
+                                    Create an Account
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
